--- a/lib-uef-v3-master/lib-uef-v3-master/src/main/resources/templates/home/fragments/layout.html
+++ b/lib-uef-v3-master/lib-uef-v3-master/src/main/resources/templates/home/fragments/layout.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <title layout:title-pattern="$CONTENT_TITLE | Thư viện Số">Thư viện Số</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
@@ -15,12 +14,15 @@
   <th:block layout:fragment="page_css"></th:block>
 </head>
 <body>
-
 <div th:replace="~{home/fragments/header :: header-content}"></div>
 
 <main layout:fragment="content"></main>
 
 <div th:replace="~{home/fragments/footer :: footer-content}"></div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/index.js}"></script>
+
+<th:block layout:fragment="page_scripts"></th:block>
 </body>
 </html>
