--- a/lib-uef-v3-master/src/main/resources/templates/home/index.html
+++ b/lib-uef-v3-master/src/main/resources/templates/home/index.html
@@ -147,7 +147,8 @@
         </div>
     </div>
 </section>
-
+    <elevenlabs-convai agent-id="agent_01jy79eddqfbsshcfq8f7p13nz"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript">
+</script>
 </main>
 
 </body>
